# file-optimization-rust-binding

./: Cargo.toml  README.md  example.py  pyproject.toml
src/: lib.rs
