[package]
name = "file_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "file_handler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
chrono = { version = "0.4.31", features = ["serde"] }
memmap = "0.7.0"
num_cpus = "1.16.0"
rayon = "1.8.0"
